.path_resolve ValueError failure when requested property is None. #87768

Closed
opened 2021-04-24 00:27:54 +02:00 by Will · 6 comments

System Information
Operating system: Linux
Graphics card: Intel

Blender Version
Broken: 2.92

Short description of error

.path_resolve(path) seems to fail with a ValueError() when path refers to a valid property the value of which is None.

Exact steps for others to reproduce the error

  • Create a bpy_struct somewhere which has a property with a value of None, such as a Boolean or Array modifier with an unset "Object" or "Collection" property.

  • Try to access the property with .path_resolve().

Or run the open script in the attached .Blend file and watch the terminal output:

PathResolveNoneFailure.blend

Trying path: C.object.path_resolve('modifiers["BooleanUnset"].collection')
Actual value: None
Result from `.path_resolve`:
ValueError('Object.path_resolve("modifiers["BooleanUnset"].collection") could not be resolved')


Trying path: C.object.path_resolve('modifiers["BooleanSet"].collection')
Actual value: <bpy_struct, Collection("Collection") at 0x7fb1ad21ccc8>
Result from `.path_resolve`:
<bpy_struct, Collection("Collection") at 0x7fb1ad21ccc8>


Trying path: C.object.modifiers["BooleanUnset"].path_resolve('collection')
Actual value: None
Result from `.path_resolve`:
ValueError('BooleanModifier.path_resolve("collection") could not be resolved')


Trying path: C.object.modifiers["BooleanSet"].path_resolve('collection')
Actual value: <bpy_struct, Collection("Collection") at 0x7fb1ad21ccc8>
Result from `.path_resolve`:
<bpy_struct, Collection("Collection") at 0x7fb1ad21ccc8>
**System Information** Operating system: Linux Graphics card: Intel **Blender Version** Broken: 2.92 **Short description of error** `.path_resolve(path)` seems to fail with a `ValueError()` when `path` refers to a valid property the value of which `is None`. **Exact steps for others to reproduce the error** * Create a `bpy_struct` somewhere which has a property with a value of `None`, such as a Boolean or Array modifier with an unset "Object" or "Collection" property. * Try to access the property with `.path_resolve()`. Or run the open script in the attached .Blend file and watch the terminal output: [PathResolveNoneFailure.blend](https://archive.blender.org/developer/F10034943/PathResolveNoneFailure.blend) ``` Trying path: C.object.path_resolve('modifiers["BooleanUnset"].collection') Actual value: None Result from `.path_resolve`: ValueError('Object.path_resolve("modifiers["BooleanUnset"].collection") could not be resolved') Trying path: C.object.path_resolve('modifiers["BooleanSet"].collection') Actual value: <bpy_struct, Collection("Collection") at 0x7fb1ad21ccc8> Result from `.path_resolve`: <bpy_struct, Collection("Collection") at 0x7fb1ad21ccc8> Trying path: C.object.modifiers["BooleanUnset"].path_resolve('collection') Actual value: None Result from `.path_resolve`: ValueError('BooleanModifier.path_resolve("collection") could not be resolved') Trying path: C.object.modifiers["BooleanSet"].path_resolve('collection') Actual value: <bpy_struct, Collection("Collection") at 0x7fb1ad21ccc8> Result from `.path_resolve`: <bpy_struct, Collection("Collection") at 0x7fb1ad21ccc8> ```
Author

Added subscriber: @WCN

Added subscriber: @WCN
Member

Added subscriber: @filedescriptor

Added subscriber: @filedescriptor
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm this on the latest 3.0.0 Alpha.

I can confirm this on the latest 3.0.0 Alpha.

This issue was referenced by f9ccd26b03

This issue was referenced by f9ccd26b037d43f2490d1f0263e45e775d30473d

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2021-09-03 14:00:54 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#87768
No description provided.