Fix T87768: `.path_resolve` fails when requested property is None.

Add a version of RNA_path_resolve_full that returns true
when the path resolves to a NULL RNA pointer.